instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:1: error: not found: type blue
setBrushColor(c:blue)
                ^InstructionsDrawG:1: error: not found: value c
setBrushColor(c:blue)
              ^